--- a/my-web-app/package.json
+++ b/my-web-app/package.json
@@ -13,11 +13,22 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "classnames": "^2.3.2",
     "eslint": "8.27.0",
     "eslint-config-next": "^13.0.2",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "4.8.4"
+    "react-modal": "^3.16.1",
+    "react-transition-group": "^4.4.5",
+    "react-transition-state": "^2.0.2",
+    "styled-components": "^5.3.6",
+    "typescript": "4.8.4",
+    "usehooks-ts": "^2.9.1"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.13.1",
+    "@types/react-transition-group": "^4.4.5",
+    "@types/styled-components": "^5.1.26"
   }
 }
