--- a/my-web-app/package.json
+++ b/my-web-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-buddy/ide-toolbox": "^2.2.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -19,16 +20,23 @@
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.2",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
     "react-transition-group": "^4.4.5",
     "react-transition-state": "^2.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
     "typescript": "4.8.4",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react-modal": "^3.13.1",
+    "@types/react-redux": "^7.1.24",
     "@types/react-transition-group": "^4.4.5",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.26"
   }
 }
