--- a/my-web-app/package.json
+++ b/my-web-app/package.json
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.13",
     "@react-buddy/ide-toolbox": "^2.2.1",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
@@ -17,6 +24,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.27.0",
     "eslint-config-next": "^13.0.2",
+    "graphql": "^16.6.0",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,15 +36,18 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
-    "typescript": "4.8.4",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.15.0",
+    "@graphql-codegen/client-preset": "^1.2.0",
+    "@graphql-codegen/typescript-operations": "^2.5.7",
     "@types/react-modal": "^3.13.1",
     "@types/react-redux": "^7.1.24",
     "@types/react-transition-group": "^4.4.5",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "typescript": "^4.9.3"
   }
 }
