--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -52,6 +52,7 @@ jobs:
         with:
           node-version: "16"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+          path: "${{ github.workspace }}/web-app"
       - name: Setup Pages
         uses: actions/configure-pages@v2
         with:
