--- a/next-client/package.json
+++ b/next-client/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "my-web-app",
+  "name": "next-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
