--- a/my-web-app/package.json
+++ b/my-web-app/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "next-client",
+  "name": "my-web-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
